@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-02-25"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090225
-#define RUBY_PATCHLEVEL 142
+#define RUBY_PATCHLEVEL 143
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
